test/unit-tests/errors/truthy-match-error.spec.d.ts
export declare class TruthyMatchErrorTests {
    shouldBeTruthyMessage(actualValue: any): void;
    shouldNotBeTruthyMessage(actualValue: any): void;
}
